--- a/PayrollSystem/ClientApp/package.json
+++ b/PayrollSystem/ClientApp/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "bootstrap": "4.5.3",
+    "firebase": "^9.1.1",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
