--- a/PayrollSystem/ClientApp/package.json
+++ b/PayrollSystem/ClientApp/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "bootstrap": "4.5.3",
-    "firebase": "^9.1.1",
+    "firebase": "^8.2.4",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-google-login": "^5.2.2",
+    "react-firebaseui": "^5.0.2",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
