--- a/PayrollSystem/PayrollSystem.csproj
+++ b/PayrollSystem/PayrollSystem.csproj
@@ -22,13 +22,13 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="ClientApp\src\firebase\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="ClientApp\src\firebase\**" />
+    <EmbeddedResource Remove="ClientApp\src\firebase\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="ClientApp\src\firebase\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ClientApp\src\firebase\components\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
